fixed app icon scaling, title bar icons, added web socket port selection and authentication

--- a/CC-Electron/src/renderer/styles/title-bar.css
+++ b/CC-Electron/src/renderer/styles/title-bar.css
@@ -50,3 +50,7 @@
 .title-bar-btn:hover > .title-bar-icon {
     fill: var(--tbaricon-alt-fill);
 }
+
+#bar-icon-maximize {
+    transform: rotate(180deg);
+}
